# korean-email-deliverability

./: .env.example  .gitignore  BUGS.md  CLAUDE.md  HOOKS.md  JOURNEY.md  NEXT_ACTIONS.md  PRD.md  Procfile  README.md  ROADMAP.md  SETUP_PHASE2.md  admin.py  app.py  check.py  pyproject.toml  railway.toml
content/: README.md  article1_세금계산서_스팸_7가지_이유.md  article2_네이버_메일_차단_기준.md  article3_KISA_RBL_블랙리스트.md  remediation_guide.md  revenue_model.md
docs/: SECURITY_HARDENING.md  batch-api.md
research/: Korean_CRM_Email_Job_Market_Analysis_Feb2026.md  세금_회계_SaaS_이메일_Deliverability_잠재고객_분석_Feb2026.md  이메일_Deliverability_Hub_기술스택_FeasibilityStudy_Feb2026.md  이메일_Deliverability_잠재고객_PayorResearch_Feb2026.md  이메일_Deliverability_한국시장_종합개요_Feb2026.md  이메일_발송률_Deliverability_Skills_Positioning_Research_Feb2026.md  이메일_발송률_Email_Deliverability_Niche_Research_Feb2026.md  이메일_발송률_KoreanJobMarket_EmailVsNotification_Feb2026.md  이메일_발송률_MinimumSkills_DeepDive_Feb2026.md  한국_B2B_SaaS_이메일_Deliverability_잠재고객_리서치_Feb2026.md  한국_ESP_Agency_파트너십_분석_Feb2026.md  한국_디지털헬스_이메일_Deliverability_클라이언트_리서치_Feb2026.md  한국_이메일_Deliverability_생태계_지도_Feb2026.md  한국_핀테크_금융_이메일_Deliverability_클라이언트_리서치_Feb2026.md
sample/: barobill.co.kr.html  example.co.kr.html
src/: auth.py  batch.py  db.py  dmarc_parser.py  emailer.py  models.py  pdf.py  report.py  scanner.py  scheduler.py  scorer.py  utils.py
templates/: dashboard.html  dashboard_domain.html  dmarc_detail.html  dmarc_list.html  email_report.html.j2  landing.html  login.html  register.html  report.html.j2  report_pdf.html.j2  report_web.html.j2  signup.html
tests/: conftest.py  test_auth.py  test_auth_session.py  test_batch.py  test_check_spf_dmarc_ptr_blacklists.py  test_checks.py  test_dashboard.py  test_db.py  test_db_customers.py  test_db_scans.py  test_dkim.py  test_dmarc_parser.py  test_emailer.py  test_integration_scan_pipeline.py  test_kisa_rbl.py  (+7 more)
(+14 files in other folders)
