[project]
name = "kr-email-health"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "dnspython",
    "requests",
    "python-dotenv",
    "fastapi[standard]>=0.115",
    "psycopg[binary]>=3.1",
    "apscheduler>=3.10",
    "resend>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
